<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.florent37.shapeofview.shapes.ArcView
            android:id="@+id/av_container"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:elevation="@dimen/margin_default"
            app:layout_constraintTop_toTopOf="parent"
            app:shape_arc_height="20dp"
            app:shape_arc_position="bottom">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:paddingTop="@dimen/margin_default">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_twice_half"
                    android:text="@string/join_welcome"
                    android:textColor="@color/colorWhite"
                    android:textSize="50sp"
                    app:layout_constraintBottom_toTopOf="@+id/view_center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:id="@+id/view_center"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginBottom="@dimen/margin_half"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:background="@color/colorPrimary"
                    tools:layout_height="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_twice_half"
                    android:gravity="center"
                    android:text="@string/join_need_setting_before_start"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_center" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.github.florent37.shapeofview.shapes.ArcView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_twice_and_half"
            android:padding="@dimen/margin_default"
            app:layout_constraintTop_toBottomOf="@+id/av_container">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_storage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:id="@+id/fl_storage_icon_frame"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_all_round_30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_storage_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/storage"
                        android:src="@drawable/ic_baseline_folder_24"
                        app:tint="@color/colorWhite" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tv_storage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:text="@string/join_storage_permission"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/fl_storage_icon_frame"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_storage_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_half"
                    android:text="@string/join_storage_permission_description"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/fl_storage_icon_frame"
                    app:layout_constraintTop_toBottomOf="@+id/tv_storage" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_request_storage"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="@dimen/margin_half"
                    android:paddingStart="@dimen/margin_default"
                    android:paddingEnd="@dimen/margin_default"
                    android:text="@string/join_allow_permission"
                    android:textColor="@color/colorWhite"
                    app:cornerRadius="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_storage_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/join_name"
                app:layout_constraintTop_toBottomOf="@+id/cl_storage"
                app:startIconDrawable="@drawable/ic_outline_people_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true" />
                ​
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_birth"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/join_birthday"
                app:layout_constraintTop_toBottomOf="@+id/til_name"
                app:startIconDrawable="@drawable/ic_outline_calendar_today_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:maxLines="1"
                    android:singleLine="true" />
                ​
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_school"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/join_school"
                app:layout_constraintTop_toBottomOf="@+id/til_birth"
                app:startIconDrawable="@drawable/ic_outline_school_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_school"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
                ​
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_area"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                app:layout_constraintTop_toBottomOf="@+id/til_school"
                app:startIconDrawable="@drawable/ic_outline_map_24">

                <AutoCompleteTextView
                    android:id="@+id/actv_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/join_area"
                    android:inputType="none"
                    android:maxLines="1"
                    android:singleLine="true" />
                ​
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_start"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/join_start"
                app:cornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_area" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>